# yamazakilab_lt_20220915

./: pyproject.toml
lt_samples/: jit_sample.py  pydantic_sample.py  type_sample.py
lt_samples/income_tax/: deduction.py  information.py  tax.py
tests/: test_lt_samples.py
tests/income_tax/: test_deduction.py  test_tax.py
