[tool.poetry]
name = "lt_samples"
version = "0.1.0"
description = ""
authors = ["KensukeNakazawa <infokensuke.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
numba = "^0.56.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
